# Sandworm

./: .gitignore  CMakeLists.txt
Example/: main.cpp
Sandworm/Include/: Sandworm.h
Sandworm/Source/: Sandworm.cpp
